# numaserve

./: .gitignore  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
.github/workflows/: release.yaml
api/v1alpha1/: groupversion_info.go  mlinference_types.go  zz_generated.deepcopy.go
cmd/: main.go
cmd/commands/: controller.go  frontline.go  init.go  root.go  sink.go
config/crd/: kustomization.yaml
config/crd/bases/: mlserve.numaproj.io_mlinferences.yaml
config/default/: kustomization.yaml
config/manager/: kustomization.yaml  manager.yaml
config/prometheus/: monitor.yaml
config/rbac/: auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  mlinference_editor_role.yaml  mlinference_viewer_role.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: Untitled  complex.yaml  kustomization.yaml  mlserve.numaproj.io_v1alpha1_mlinference.yaml  ss
hack/: boilerplate.go.txt
manifests/: goreplay.yaml  input.json  isbsvc.yaml  minio-secret.yaml  minio.yaml  pipeline.yaml  statefulset.yaml
pkg/common/: common.go  constant.go  prometheus.go
pkg/controller/: controller.go  installer.go  operate.go  suite_test.go  validate.go
pkg/frontline/: handle.go  server.go  session.go
pkg/init/: s3.go
pkg/sink/: httpsink.go
serve/: .dockerignore  Dockerfile  Makefile  log.conf  model.onnx  pyproject.toml  serve.py
serve/src/: __init__.py  _constants.py  model.py  udf.py
serve/tests/: test_udf.py
(+3 files in other folders)
